# ulearn-platform

./: .env-example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HELP.md  Makefile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: main.py
app/agents/: content.py  content_llm.py  content_llm_models.py  mcp_tools.py  planner.py  validator.py  validator_rules.py
app/agents/prompts/: content_llm_system.txt  content_llm_user.txt
app/api/: lesson.py
app/core/: config.py  logging.py
app/mcp/: python_code_hints.py
app/models/: agents.py  api.py  db.py
app/services/: context7_client.py  lesson_service.py  markdown_renderer.py  mcp_hints.py  mongo.py  static_lessons.py
docs/: agent-architecture.md  api-usage.md  architecture.md  deployment.md  frontend.md  lesson-generation-poc.md  lovable_frontend_prompt.md  mcp.md  prompts.md  testing.md  v1-goals.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/nginx/: default.conf
frontend/public/: runtime-config.js  site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/api/: executeLocally.ts  lessonClient.ts
frontend/src/components/: CodeBlock.tsx  ExerciseBlock.tsx  HelpDrawer.tsx  LessonRenderer.tsx  (+2 more)
notebooks/: lesson_generation_format_poc.ipynb
scripts/: render-frontend-build.sh
tests/: test_agents.py  test_api.py  test_integration.py  test_mcp_hints.py  test_renderer.py  test_service.py  test_validator_rules.py
tests/integration/: test_lesson_workflow.py
(+6 files in other folders)
