[project]
name = "agentic-micro-learning-platform"
version = "0.1.0"
description = "Agentic micro-learning platform with FastAPI backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pymongo>=4.7.0",
  "openai>=1.40.0",
  "pydantic-ai>=1.42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ipykernel>=6.29.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
  "unit: unit tests",
  "api: API contract tests",
  "integration: integration tests",
  "llm: LLM content agent parsing tests",
]
